--- a/pages/dataStatisticsPage.html
+++ b/pages/dataStatisticsPage.html
@@ -81,9 +81,20 @@
 			   			<span class="mui-placeholder">
 			   				<span class="mui-icon mui-icon-search"></span>搜索地区
 			   			</span>
+			   			<span class="mui-icon mui-icon-bars"></span>
 			   		</div>
 			   		<div class="dropdownsearch">
+						<div>
+							<div class="mui-col-xs-5 mui-text-center searchtitle">
+								<span>根地区</span>
+							</div>
 
+						</div>
+						<div>
+							<div class="mui-col-xs-5 mui-text-center searchtitle">
+								<span>子地区</span>
+							</div>
+						</div>
 			   		</div>
 			   </div>
 			</div>
