--- a/pages/viewdetail.html
+++ b/pages/viewdetail.html
@@ -16,7 +16,7 @@
 					<button class="mui-btn mui-icon mui-icon-close"></button>
 				</div>
 				<div id="clickdownwrap">
-					<span class="mui-icon mui-icon-down"></span>
+					<span class="mui-icon mui-icon-arrowdown"></span>
 				</div>
 				<div id="othersearch">
 					<div class="mui-input-row">
@@ -41,7 +41,7 @@
 						<button id="detailsearch" class="mui-btn mui-icon mui-icon-search" style="width: 99%;"></button>
 					</div>
 					<div id="clickdownwrapup">
-						<span class="mui-icon mui-icon-up"></span>
+						<span class="mui-icon mui-icon-arrowup"></span>
 					</div>
 				</div>
 			</div>
