--- a/pages/dataStatisticsPage.html
+++ b/pages/dataStatisticsPage.html
@@ -77,7 +77,7 @@
 			   <div id="dataBottomSearchDiv">
 			   		<div class="searchdivdata mui-input-row mui-search">
 			   			<!-- <input type="search" class="mui-input-clear" placeholder="" /> -->
-			   			<select>
+			   			<select style="padding: 6px 10px;">
 			   			</select>
 			   			<span class="mui-placeholder">
 			   				<span class="mui-icon mui-icon-search"></span>搜索地区
