--- a/pages/dataStatisticsPage.html
+++ b/pages/dataStatisticsPage.html
@@ -75,9 +75,9 @@
 				   <div class="datachart"></div>
 			   </div>
 			   <div id="dataBottomSearchDiv">
-			   		<div class="searchdivdata mui-input-row mui-search">
+			   		<div class="searchdivdata mui-search">
 			   			<!-- <input type="search" class="mui-input-clear" placeholder="" /> -->
-			   			<select style="padding: 6px 10px;">
+			   			<select style="padding: 6px 20px;">
 			   			</select>
 			   			<span class="mui-placeholder">
 			   				<span class="mui-icon mui-icon-search"></span>搜索地区
