--- a/pages/dataStatisticsPage.html
+++ b/pages/dataStatisticsPage.html
@@ -77,11 +77,12 @@
 			   <div id="dataBottomSearchDiv">
 			   		<div class="searchdivdata mui-search">
 			   			<!-- <input type="search" class="mui-input-clear" placeholder="" /> -->
-			   			<select style="padding: 6px 20px;">
+			   			<select id="wholearea" style="padding: 6px 20px;">
 			   			</select>
 			   			<span class="mui-placeholder">
 			   				<span class="mui-icon mui-icon-search"></span>搜索地区
 			   			</span>
+			   			<span id="searchIconDel" class="mui-icon mui-icon-clear mui-hidden" style="right: 16%;position: absolute;margin: 0;"></span>
 			   			<span class="mui-icon mui-icon-bars"></span>
 			   		</div>
 			   		<div class="dropdownsearch">
