--- a/pages/dataStatisticsPage.html
+++ b/pages/dataStatisticsPage.html
@@ -82,7 +82,7 @@
 			   			<span class="mui-placeholder">
 			   				<span class="mui-icon mui-icon-search"></span>搜索地区
 			   			</span>
-			   			<span id="searchIconDel" class="mui-icon mui-icon-clear mui-hidden" style="right: 16%;position: absolute;margin: 0;"></span>
+			   			<span id="searchIconDel" class="mui-icon mui-icon-clear mui-hidden" style="right: 16%;position: absolute;margin: 0;top:7px"></span>
 			   			<span class="mui-icon mui-icon-bars"></span>
 			   		</div>
 			   		<div class="dropdownsearch">
