--- a/pages/sprintManage.html
+++ b/pages/sprintManage.html
@@ -6,12 +6,14 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.min.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/mcss-1.3.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/mcss-1.4.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="../css/komh5.css"/> -->
 		<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-		 <script src="../js/sprintmjs-1.2.min.js" type="text/javascript" charset="utf-8"></script>
+		  <script src="../js/sprintmjs-1.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<!-- <script type="text/javascript" src="../js/iscroll.js" ></script>
 		<script type="text/javascript" src="../js/util.js" ></script>  
-		<script type="text/javascript" src="../js/sprintmjs-1.0-debug.js" ></script>   -->
+		<script type="text/javascript" src="../js/sprintmjs-1.0-debug.js" ></script>
+		<script src="../js/layer-1.0.js" type="text/javascript" charset="utf-8"></script>   -->
 	</head>
 	<body style="overflow: hidden;">
 		<input type="hidden" id="hiddentoken"/>
@@ -111,7 +113,7 @@
 					   		</div>
 					   		<canvas id="fivecanvas" width="100%" height="100px"></canvas>
 					   	</div>
-					   	<div class="linear-gradient-div" style="min-height:90px;height:auto">
+					   	<div class="linear-gradient-div" style="min-height:90px;height:auto;padding-bottom: 1px;">
 					   		<div class="statusHeader">
 					   			<div class="statusTitle theorder">
 						   			排名情况
@@ -122,7 +124,7 @@
 					   		</div>
 					   		<div class="theorderwrapper" id="theorderwrapperid">
 					   		</div>
-					   		<table class="mtable" id="rankinfotable" style="display:none">
+					   		<table class="dtable" id="rankinfotable" style="display:none">
 					   			<thead>
 									<tr>
 										<th>大区负责人</th>
@@ -140,27 +142,14 @@
 			</div>
 		</div>
 		<div class='view next'></div>
-		<!-- <div class="view popbox" id="editpopbox">
-			<header class="mui-bar mui-bar-nav">
-				<h1 class="mui-title">编辑冲刺目标</h1>
-			</header>
-			<div class="scrollviewcontent" id="popboxscrollwrap">
-				<div class="popboxwrap">
+		<div id="popbox" style="display:none">
+			<div class="popboxwrap">
 			      <div class="">请输入新的季度目标(万)</div>
 			      <div class="">
-			          <input id="newtargetvalue" type="number" style="width:80%" placeholder="请输入新目标" />万     
+			          <input id="newtargetvalue" type="number" style="width:80%;margin-bottom: 10px;" placeholder="请输入新目标" autofocus />&nbsp;&nbsp;万     
 			      </div>
-			    </div> 
-			</div>
-			<nav class="mui-bar mui-bar-tab">
-			    <a class="mui-tab-item modalOK" style="border-right: 1px solid #ccc;">
-			        确定
-			    </a>
-			    <a class="mui-tab-item modalClose">
-			       取消
-			    </a>
-			</nav>
-		</div> -->
+			</div> 
+		</div>
 		<div id="mianOrderTem" style="display:none">
 			<div>
    				$name$
